# Aria

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.h.in.example
include/: aria.hpp  commands.hpp  discord.hpp  sshGlobals.hpp  utils.hpp
include/commands/: commands.hpp  commandsInfos.hpp  minecraftInfos.hpp
include/json/: jsonCommands.hpp
include/utils/: progressBar.hpp
libs/: discord-rpc.lib  libcrypto.lib  libssh2.lib
src/: aria.cpp  main.cpp
src/commands/: cd.cpp  commandManager.cpp  commands.cpp  create.cpp  del.cpp  go.cpp  help.cpp  info.cpp  ls.cpp  version.cpp
src/commands/docker/: create.cpp  start.cpp
src/integration/: discord.cpp
src/json/: jsonCommands.cpp
src/ssh/: sshCommands.cpp  sshConnection.cpp
src/utils/: progressBar.cpp
